--- a/style.css
+++ b/style.css
@@ -81,14 +81,33 @@ button {
 .section-2 {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    gap: 48px;
+}
+
+.title2 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
 }
 
 .image-container {
     display: flex;
-    justify-content: center;
-    gap: 52px;
+    align-items: center;
+    gap: 48px;
 }
 
 .img {
-    max-width: 50px;
+    display: flex;
+    flex-direction: column;
+    max-width: 170px;
+}
+
+.text {
+    text-align: center;
+}
+
+.section-3 {
+    display: flex;
 }
