--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ ul {
     color: #e5e7eb;
 }
 
-button {
+.btn {
     background-color: #3882f6;
     color: #f9faf8;
     font-size: 16px;
@@ -62,6 +62,11 @@ button {
     border-radius: 8px;
     border: none;
     width: 130px;
+}
+
+.call {
+    border: 2px solid #f9faf8;
+    max-height: fit-content;
 }
 
 .footer {
@@ -76,6 +81,7 @@ button {
 
 .section-1 {
     gap: 24px;
+    padding: 120px 80px;
 }
 
 .section-2 {
@@ -114,7 +120,7 @@ button {
     background-color: #e5e7eb;
     align-items: center;
     padding: 100px;
-    margin-top: 80px;    
+    margin: 80px 0px;   
 }
 
 .quote {
@@ -126,7 +132,27 @@ button {
 }
 
 .quote-source {
+    display: flex;
     font-weight: bold;
     font-size: 24px;
     align-self: flex-end;
 }
+
+.section-4 {
+    display: flex;
+    background-color: #3882f6;
+    color: #f9faf8;
+    max-width: 1030px;
+    align-self: center;
+    align-items: center;
+    padding: 40px 100px;
+    border-radius: 8px;
+    margin-bottom: 80px;
+    gap: 230px;
+}
+
+.title4 {
+    font-size: 18px;
+    font-weight: bold;
+}
+
