--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     margin: 0;
     flex-direction: column;
+    justify-content: center;
 }
 
 a {
@@ -17,7 +18,7 @@ ul {
     display: flex;
     margin: 0;
     padding: 0;
-    gap: 20px;
+    gap: 24px;
 }
 
 .logo {
@@ -26,20 +27,29 @@ ul {
     font-weight: bold;
 }
 
-.content {
-    flex: 1;
+.head {
+    background-color: #1F2937;
     display: flex;
     flex-direction: column;
-    
+    padding: 24px 0;
+    gap: 16px;
 }
 
 .header,
-.section-1, 
-.footer {
-    background-color: #1F2937;
+.section-1 {
+    margin: 0 auto;
+    width: 1000px;
+}
+
+.header {
     display: flex;
-    justify-content: space-around;
-    padding: 16px;
+    justify-content: space-between;
+}
+
+.section-1 {
+    display: flex;
+    padding: 48px;
+    gap: 32px;
 }
 
 .title1 {
@@ -62,26 +72,20 @@ ul {
     border-radius: 8px;
     border: none;
     width: 130px;
-}
-
-.call {
-    border: 2px solid #f9faf8;
-    max-height: fit-content;
-}
-
-.footer {
-    color: #e5e7eb;
+    cursor: pointer;
 }
 
 .description {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 10px;
+    align-items: flex-start;
 }
 
-.section-1 {
-    gap: 24px;
-    padding: 120px 80px;
+.hero-img {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .section-2 {
@@ -99,8 +103,9 @@ ul {
 }
 
 .image-container {
+    width: 1000px;
     display: flex;
-    align-items: center;
+    justify-content: center;
     gap: 48px;
 }
 
@@ -119,8 +124,14 @@ ul {
     flex-direction: column;
     background-color: #e5e7eb;
     align-items: center;
-    padding: 100px;
-    margin: 80px 0px;   
+    padding: 48px 0;
+    margin-top: 80px;  
+    gap: 16px; 
+}
+
+.quote,
+.quote-source {
+    width: 830px;
 }
 
 .quote {
@@ -128,31 +139,50 @@ ul {
     color: #1F2937;
     font-style: italic;
     font-weight: 100;
-    max-width: 830px;
 }
 
 .quote-source {
     display: flex;
     font-weight: bold;
     font-size: 24px;
-    align-self: flex-end;
+    justify-content: flex-end;
+}
+
+.sec4-container {
+    display: flex;
+    justify-content: center;
 }
 
 .section-4 {
     display: flex;
     background-color: #3882f6;
     color: #f9faf8;
-    max-width: 1030px;
-    align-self: center;
-    align-items: center;
-    padding: 40px 100px;
-    border-radius: 8px;
-    margin-bottom: 80px;
-    gap: 230px;
+    width: 1000px;
+    border-radius: 10px;
+    margin: 80px 0px;
+    padding: 32px 0;
+}
+
+.section-4>* {
+    margin: 0 auto;
 }
 
 .title4 {
     font-size: 18px;
     font-weight: bold;
+}
+
+.call {
+    border: 2px solid #f9faf8;
+    max-height: fit-content;
+}
+
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    color: #e5e7eb;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
 }
 
